--- a/WebShop/webapp/package.json
+++ b/WebShop/webapp/package.json
@@ -12,6 +12,7 @@
     "mobx-react": "^5.1.2",
     "mobx-react-devtools": "^5.0.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "styled-components": "^3.2.6"
   }
 }
