--- a/WebShop/WebShop.csproj
+++ b/WebShop/WebShop.csproj
@@ -30,6 +30,8 @@
     <None Remove="webapp\src\Popup\PopupStore.ts" />
     <None Remove="webapp\src\Product\Edit.tsx" />
     <None Remove="webapp\src\Product\EditStore.ts" />
+    <None Remove="webapp\src\Product\ImageUpload.tsx" />
+    <None Remove="webapp\src\Product\ImageUploadStore.ts" />
     <None Remove="webapp\src\Product\Page.tsx" />
     <None Remove="webapp\src\Product\Product.tsx" />
     <None Remove="webapp\src\Product\ProductStore.tsx" />
@@ -60,6 +62,8 @@
     <TypeScriptCompile Include="webapp\src\Page\PageStore.ts" />
     <TypeScriptCompile Include="webapp\src\Product\Edit.tsx" />
     <TypeScriptCompile Include="webapp\src\Product\EditStore.ts" />
+    <TypeScriptCompile Include="webapp\src\Product\ImageUpload.tsx" />
+    <TypeScriptCompile Include="webapp\src\Product\ImageUploadStore.ts" />
     <TypeScriptCompile Include="webapp\src\Product\Page.tsx" />
     <TypeScriptCompile Include="webapp\src\Product\Product.tsx" />
     <TypeScriptCompile Include="webapp\src\Product\ProductStore.tsx" />
